# webhawk

./: .gitignore  LICENSE  PROGRESS.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  scope.py  verification.py  worker.py
backend/app/api/: health.py  targets.py
backend/app/core/: logging.py  queue.py
backend/tests/: test_health.py  test_models.py  test_queue.py  test_scope.py  test_targets_api.py  test_verification.py
web/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  index.css  main.tsx
